--- a/style.css
+++ b/style.css
@@ -56,3 +56,11 @@ section {
   height: 200px;
   border-radius: 10px;
 }
+
+footer {
+  background-color: #1e3d3b;
+  color: white;
+  text-align: center;
+  padding: 20px;
+  margin-top: 40px;
+}
